--- a/catalogue.html
+++ b/catalogue.html
@@ -13,10 +13,11 @@
         <h2>CATALOUGE PAGE OF BOOK STORE</h2>
         <nav>
             <ul>
-                <li><a href="homepage.html">Homepage</a></li>
-                <li><a href="catalouge.html">CatalougePage</a></li>
-                <li><a href="register.html">RegisterationPage</a></li>
-                <li><a href="login.html">Loginpage</a></li>
+                <li><a href="index.html" >Home Page</a></li>
+                <li><a href="catalogue.html" target="_blank">Catalogue Page</a></li>
+                <li><a href="loginPage.html" target="_parent">Login Page</a></li>
+                <li><a href="registrationPage.html" target="_top">Registration Page</a></li>
+
             </ul>
         </nav>
     </div>
