--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Welcome To Online Book Store</h1>
         <nav>
             <ul>
-                <li><a href="homePage.html" >Home Page</a></li>
+                <li><a href="index.html" >Home Page</a></li>
                 <li><a href="catalogue.html" target="_blank">Catalogue Page</a></li>
                 <li><a href="loginPage.html" target="_parent">Login Page</a></li>
                 <li><a href="registrationPage.html" target="_top">Registration Page</a></li>
