--- a/loginpage.html
+++ b/loginpage.html
@@ -11,13 +11,13 @@
     <h1>Welcome To Online Book Store</h1>
     <h2>Login Page</h2>
     <nav>
-        <ul>
-            <li><a href="homePage.html" >Home Page</a></li>
-            <li><a href="catalogue.html" target="_blank">Catalogue Page</a></li>
-            <li><a href="loginPage.html" target="_parent">Login Page</a></li>
-            <li><a href="registrationPage.html" target="_top">Registration Page</a></li>
+      <ul>
+        <li><a href="index.html" >Home Page</a></li>
+        <li><a href="catalogue.html" target="_blank">Catalogue Page</a></li>
+        <li><a href="loginPage.html" target="_parent">Login Page</a></li>
+        <li><a href="registrationPage.html" target="_top">Registration Page</a></li>
 
-        </ul>
+    </ul>
         
     </nav>
 </div>
