--- a/registrationpage.html
+++ b/registrationpage.html
@@ -14,8 +14,8 @@
       <ul>
         <li><a href="index.html" >Home Page</a></li>
         <li><a href="catalogue.html" target="_blank">Catalogue Page</a></li>
-        <li><a href="loginPage.html" target="_parent">Login Page</a></li>
-        <li><a href="registrationPage.html" target="_top">Registration Page</a></li>
+        <li><a href="loginpage.html" target="_parent">Login Page</a></li>
+        <li><a href="registrationpage.html" target="_top">Registration Page</a></li>
 
     </ul>
         
